--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div>
                     <p class="humidity">50%</p>
-                    <p>Humdity</p>
+                    <p>Humidity</p>
                 </div>
 
                 <div class="col">
